<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Qing Pool</string>
    <string name="action_settings">Configurations</string>
    <string name="btnConnexion">Connexion avec Gmail</string>
    <string name="redirectionPagePrincipale">Gestion des pools</string>
    <string name="btnConnexionReset">Réinitialisation</string>
    <string name="btnStartPool">Créer un nouveau pool</string>
    <string name="btnConnPool">Se connecter à un pool existant</string>
    <string name="btnViewPool">Voir les pools existants</string>
    <string name="btnCreerPool">Créer le pool</string>
    <string name="btnConnexionPool">Connexion</string>
    <string name="btnPageAccueil">Retourner à la page accueil</string>
    <string name="btnPasserChoix">Passer au choix des joueurs</string>
    <string name="btnVoirJoueur">Voir les joueurs</string>
    <string name="btnVoirProfilJoueur">Voir le profil</string>
    <string name="lblNomPool">Nom du pool</string>
    <string name="lblMdp">Mot de passe</string>
    <string name="lblCourriel">Courriel</string>
    <string name="lblConfMdp">Confirmation de mot de passe</string>
    <string name="lblNbPartMax">Nombre de participants maximum</string>
    <string name="lblNbPartMax1">Participants max</string>
    <string name="hintEmail">abc@gmail.com</string>
    <string name="hintMdp">Mot de passe</string>
    <string name="listJoueur">Liste des joueurs</string>
    <string name="btnEnvoieCou">Inviter d\'autres participants</string>
    <string name="btnRetPart">Retourner au participant</string>
    <string name="ok">OK</string>

    <color name="white">#FFFFFF</color>
    <color name="black">#000000</color>

    <string name="default_status" />
    <string name="sign_out_button_name">Déconnexion</string>
    <string name="revoke_access_button_name">Révoquer les droits d\'accès</string>
    <string name="signing_in_status">Connexion avec Google+</string>
    <string name="signed_in_status">Connecté en tant que \"%s\".</string>
    <string name="plus_generic_error">La connexion avec Google+ est impossible</string>
    <string name="progress_message">Connexion à Google&#8230;</string>
    <string name="revoke_access_status">Droits d\'accès révoqués</string>
    <string name="revoke_access_error_status">Impossible de révoquer les droits d\'accès</string>
    <string name="loading_status">Chargement&#8230;</string>
    <string name="signed_out_status">Déconnecté</string>
    <string name="unknown_person">Inconnu</string>
    <string name="sil">Silhouette</string>
    <string name="nomPart">Nom: </string>
    <string name="scorePart">Score: </string>
    <string name="hello_world">Hello World!</string>
    <string name="title_activity_profilpart">Profilpart</string>
    <string name="title_activity_evoie_courriel">EvoieCourrielActivity</string>
    <string name="equipe">Équipe: </string>
    <string name="fermer">Fermer</string>
    <string name="selection">Sélectionner un joueur</string>
    <string name="img_choix_description">Choix</string>
    <string name="title_activity_profil_joue_activity1"></string>
</resources>
