<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background">

	<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
    
   <ImageView
		        android:id="@+id/imageView1"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:src="@drawable/titre"
		        android:contentDescription="@string/app_name" 
		        android:layout_marginBottom="7dp"
		        android:layout_marginTop="10dp"/>
   
   <ImageView
		        android:id="@+id/imageView2"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:src="@drawable/hockey_joueur"
		        android:contentDescription="@string/sil" 
		        android:layout_marginBottom="7dp"
		        android:layout_marginTop="10dp"/>
   
   <TextView 
        android:id="@+id/nomPart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nomPart"
            android:layout_marginBottom="7dp"
		    android:layout_marginTop="10dp"
		    android:textSize="20sp" />
   
   <TextView 
        android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scorePart"
            android:layout_marginBottom="7dp"
		    android:layout_marginTop="10dp"
		    android:textSize="20sp" />
   
   <TextView 
        android:id="@+id/equipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/equipe"
            android:layout_marginBottom="7dp"
		    android:layout_marginTop="10dp"
		    android:textSize="20sp" />
   
   <Button
            android:id="@+id/btnRetPart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnRetPart"
            android:layout_marginBottom="30dip"
            android:textSize="20sp" />
  

	</LinearLayout>
</ScrollView>
