<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/RelativeLayout01" 
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

        <EditText
            android:id="@+id/editText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/editText2"
            android:layout_alignLeft="@+id/editText2"
            android:layout_alignRight="@+id/editText2"
            android:ems="10"
            android:hint="@string/hintEmail"
            android:inputType="textEmailAddress" />
       
    
    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:ems="10"
        android:hint="@string/hintMdp"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnConnOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText2"
        android:layout_alignRight="@+id/editText2"
        android:layout_below="@+id/editText2"
        android:layout_marginTop="20dp"
        android:text="@string/btnConnexionOk" />

    <Button
        android:id="@+id/btnConnReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnConnOk"
        android:layout_alignRight="@+id/btnConnOk"
        android:layout_below="@+id/btnConnOk"
        android:layout_marginTop="14dp"
        android:text="@string/btnConnexionReset" />

</RelativeLayout>
